--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "express-handlebars": "^6.0.5"
+    "express-handlebars": "^6.0.5",
+    "firebase-admin": "^10.2.0",
+    "knex": "^2.0.0",
+    "mongoose": "^6.3.4",
+    "mysql": "^2.18.1",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
