--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js --exec babel-node",
+    "dev": "nodemon --exec npx babel-node src/index.js",
     "build": "babel src -d dist && ncp src/views dist/views && ncp src/public dist/public"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "express-handlebars": "^6.0.5",
+    "express-session": "^1.17.3",
     "firebase-admin": "^10.2.0",
     "knex": "^2.0.0",
     "mongoose": "^6.3.4",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "sharp": "^0.30.7",
     "sqlite3": "^5.0.8"
   },
   "devDependencies": {
